<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CLW</string>
    <string name="title_activity_file_select">Choose a file</string>
    <string name="action_settings">Settings</string>
    <string name="Select">Select a configuration file</string>
    <string name="Save">Save</string>
    <string name="preference">it.lorenzo.clw.preference</string>
    <string name="clickMe">Click me to select configuration file</string>
    <string name="Browse">Browse</string>
    <string name="title_activity_file_chooser">Choose a file</string>
    <string name="action_search">search</string>
    <string name="linearLayoutChooser">linearLayoutChooser</string>
    <string name="use_alarm">Use alarm manager</string>
    <string name="update_intervall">Update intervall</string>
    <string name="pref_default_update_intervall">30</string>
    <string name="update_widgets">update widgets</string>
    <string name="alarm_key">alarm_key</string>
    <string name="update_intervall_key">intervall_key</string>
    <string name="use_notification_key">use_notification_key</string>
    <string name="use_notification">use notification</string>
    <string name="title_activity_calendar_ids">CalendarIDS</string>

    <string name="hello_world">Hello world!</string>
    <string name="browse_external">Select with external app.</string>
    <string name="example">use example file</string>
    <string name="use_example">Select Me !</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_setting">Settings</string>
    <string name="action_example">Examples</string>
    <string name="action_calendar">Calendar</string>
    <string name="Create">Create</string>


</resources>