<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <TextView
        android:id="@+id/textView1"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Select" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="useExample"
        android:text="@string/example" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="browse_ext"
        android:text="@string/browse_external" />

    <Button
        android:id="@+id/browse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="browse"
        android:text="@string/Browse" />


    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveSetting"
        android:text="@string/Save"/>

</LinearLayout>